Fixed a small z-index bug.

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@ div#email_popup{
 	background: rgba(255,255,255,0.9);
 	border: 1px solid #aaa;
 	font-size: 90%;
+	z-index: 15;
 }
 
 div#projectinfo h2, h4{
